updated the geometry entry bean